--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,19 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "72fa0180",
+   "execution_count": 4,
+   "id": "c0cdedfd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "\n",
+    "import nltk \n",
+    "from nltk.corpus import twitter_samples \n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "52d80ed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package twitter_samples to /home/p3/desktop...\n",
+      "[nltk_data]   Unzipping corpora/twitter_samples.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('twitter_samples', download_dir='/home/p3/desktop')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8d083ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_positive_tweets = twitter_samples.strings('positive_tweets.json')\n",
+    "all_negative_tweets = twitter_samples.strings('negative_tweets.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6e161eec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive tweets:  5000\n",
+      "Number of negative tweets:  5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of positive tweets: ', len(all_positive_tweets))\n",
+    "print('Number of negative tweets: ', len(all_negative_tweets))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b9ea1697",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(all_positive_tweets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "35223192",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(all_negative_tweets[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d91b353",
+   "id": "60a2ac4b",
    "metadata": {},
    "outputs": [],
    "source": []
